test/es6/openfl/errors/EOFErrorTest.js
import EOFError from "openfl/errors/EOFError";
var assert = chai.assert;


describe ("ES6 | EOFError", function () {
	
	
	it ("test", function () {
		
		// TODO: Confirm functionality
		
		var eofError = new EOFError ();
		assert.notEqual (eofError, null);
		
	});
	
	
});